--- a/index.haml
+++ b/index.haml
@@ -5,4 +5,56 @@
 		%meta{charset: "UTF-8"}
 	%body
 		.item-slider#item-slider
-			ul*4>li
+			-# ul*4>li*4>a>img SO EASY!!!!
+			%ul 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/1.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/2.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/3.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/4.png", :alt => ""}/ 
+			%ul 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/5.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/6.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/7.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/8.png", :alt => ""}/ 
+			%ul 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/1.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/2.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/3.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/4.png", :alt => ""}/ 
+			%ul 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/5.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/6.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/7.png", :alt => ""}/ 
+				%li 
+					%a{:href => "#"} 
+						%img{:src => "img/8.png", :alt => ""}/ 
