--- a/index.haml
+++ b/index.haml
@@ -9,52 +9,68 @@
 			%ul 
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/1.png", :alt => ""}/ 
+						%img{:src => "img/1.png", :alt => "img1"}/
+						%h4 Kwiatki
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/2.png", :alt => ""}/ 
+						%img{:src => "img/2.png", :alt => "img2"}/
+						%h4 Stokrotki
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/3.png", :alt => ""}/ 
+						%img{:src => "img/3.png", :alt => "img3"}/
+						%h4 Tulipan
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/4.png", :alt => ""}/ 
+						%img{:src => "img/4.png", :alt => "img4"}/
+						%h4 Niezapominajki
 			%ul 
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/5.png", :alt => ""}/ 
+						%img{:src => "img/5.png", :alt => "img5"}/
+						%h4 Jeże
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/6.png", :alt => ""}/ 
+						%img{:src => "img/6.png", :alt => "img6"}/
+						%h4 Kotek
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/7.png", :alt => ""}/ 
+						%img{:src => "img/7.png", :alt => "img7"}/
+						%h4 Gwiazda Śmierci
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/8.png", :alt => ""}/ 
+						%img{:src => "img/8.png", :alt => "img8"}/
+						%h4 Papuga
 			%ul 
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/1.png", :alt => ""}/ 
+						%img{:src => "img/1.png", :alt => "img1"}/
+						%h4 Kwiatki
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/2.png", :alt => ""}/ 
+						%img{:src => "img/2.png", :alt => "img2"}/
+						%h4 Stokrotki
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/3.png", :alt => ""}/ 
+						%img{:src => "img/3.png", :alt => "img3"}/
+						%h4 Tulipan
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/4.png", :alt => ""}/ 
+						%img{:src => "img/4.png", :alt => "img4"}/
+						%h4 Niezapominajki
 			%ul 
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/5.png", :alt => ""}/ 
+						%img{:src => "img/5.png", :alt => "img5"}/
+						%h4 Jeże
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/6.png", :alt => ""}/ 
+						%img{:src => "img/6.png", :alt => "img6"}/
+						%h4 Kotek
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/7.png", :alt => ""}/ 
+						%img{:src => "img/7.png", :alt => "img7"}/
+						%h4 Gwiazda Śmierci
 				%li 
 					%a{:href => "#"} 
-						%img{:src => "img/8.png", :alt => ""}/ 
+						%img{:src => "img/8.png", :alt => "img8"}/
+						%h4 Papuga
