--- a/index.haml
+++ b/index.haml
@@ -74,3 +74,8 @@
 					%a{:href => "#"} 
 						%img{:src => "img/8.png", :alt => "img8"}/
 						%h4 Papuga
+			%nav 
+				%a{:href => "#"} Kwiaty 
+				%a{:href => "#"} Zwierzęta
+				%a{:href => "#"} Foki
+				%a{:href => "#"} Krokodyle
