--- a/styles.sass
+++ b/styles.sass
@@ -9,7 +9,7 @@
 		left: 0
 		bottom: 140px
 		overflow: hidden
-		text-align: content
+		text-align: center
 		pointer-events: none
 		&.list-current
 			pointer-events: auto
