--- a/styles.sass
+++ b/styles.sass
@@ -69,3 +69,27 @@
 			-webkit-transition: color .2s linear
 			&:hover, & .item-current
 				color: #000
+			&.item-selected:after,&.item-selected:before
+				content: ''
+				position: absolute
+				top: -5px
+				border: solid transparent
+				height: 0
+				width: 0
+				pointer-events: none
+			&.item-selected:after
+				border-color: transparent
+				border-top-color: #fff
+				border-width: 20px
+				left: 50%
+				margin-left: -20px
+			&.item-selected:before
+				border-color: transparent
+				border-top-color: #333
+				border-width: 27px
+				left: 50%
+				margin-left: -27px
+				
+
+
+
