--- a/styles.sass
+++ b/styles.sass
@@ -1,3 +1,13 @@
+$class-names: "moveFromRight", "moveFromLeft", "moveToRight", "moveToLeft"
+
+@keyframes scaleUp
+	0%
+		transform: translateX(0) scale(0)
+		webkit-transform: translateX(0) scale(0)
+	100%
+		transform: translateX(0) scale(1)
+		webkit-transform: translateX(0) scale(1)
+
 .item-slider
 	position: relative
 	margin-top: 30px
@@ -19,6 +29,17 @@
 			bottom: auto
 			margin: 0
 			overflow: visible
+		@each $class-name in $class-names
+			&.item-#{$class-name} li
+				animation: #{$class-name} 350ms ease-in-out both	
+				@if $class-name == "moveToLeft" or $class-name == "moveFromRight"
+					@for $i from 1 through 4
+						&:nth-child(#{$i})
+							animation-delay: #{-90+90*$i}ms
+				@else 
+					@for $i from 1 through 4
+						&:nth-child(#{5 - $i*1})
+							animation-delay: #{-90 +90*$i}ms
 		li
 			display: inline-block
 			padding: 20px
@@ -48,6 +69,11 @@
 				padding: 20px 10px 0
 			&:hover
 				opacity: .7
+		&:first-child li, .no-js & li
+			animation: scaleUp 350ms ease-in-out both
+			@for $i from 1 through 4
+				&:nth-child(#{$i})
+					animation-delay: #{90*$i}ms
 	nav
 		position: relative
 		top: 400px
@@ -77,19 +103,18 @@
 				height: 0
 				width: 0
 				pointer-events: none
-			&.item-selected:after
+			&.item-selected:after // Dodaje kontent przed i po "" ktory daje border
 				border-color: transparent
 				border-top-color: #fff
-				border-width: 20px
+				border-width: 20px // ten jest nakladany po i jest bialy (zaslania czarny)
 				left: 50%
 				margin-left: -20px
 			&.item-selected:before
 				border-color: transparent
 				border-top-color: #333
-				border-width: 27px
+				border-width: 27px // szerszy i zasloniety przez to z after
 				left: 50%
 				margin-left: -27px
-				
 
 
 
