--- a/styles.sass
+++ b/styles.sass
@@ -37,7 +37,7 @@ $class-names: "moveFromRight", "moveFromLeft", "moveToRight", "moveToLeft"
 		transform: translateX(0) scale(1)
 		webkit-transform: translateX(0) scale(1)
 
-.item-slider
+.mi-slider
 	position: relative
 	margin-top: 30px
 	height: 490px
@@ -75,7 +75,7 @@ $class-names: "moveFromRight", "moveFromLeft", "moveToRight", "moveToLeft"
 		overflow: hidden
 		text-align: center
 		pointer-events: none
-		&.item-current
+		&.mi-current
 			pointer-events: auto
 		.no-js & // FOR MODERNIZR!
 			position: relative
@@ -84,16 +84,18 @@ $class-names: "moveFromRight", "moveFromLeft", "moveToRight", "moveToLeft"
 			margin: 0
 			overflow: visible
 		@each $class-name in $class-names
-			&.item-#{$class-name} li
+			&.mi-#{$class-name} li
 				animation: #{$class-name} 350ms ease-in-out both	
 				@if $class-name == "moveToLeft" or $class-name == "moveFromRight"
 					@for $i from 1 through 4
 						&:nth-child(#{$i})
 							animation-delay: #{-90+90*$i}ms
+							-webkit-animation-delay: #{-90+90*$i}ms
 				@else 
 					@for $i from 1 through 4
 						&:nth-child(#{5 - $i*1})
 							animation-delay: #{-90 +90*$i}ms
+							-webkit-animation-delay: #{-90 +90*$i}ms
 		li
 			display: inline-block
 			padding: 20px
@@ -147,9 +149,9 @@ $class-names: "moveFromRight", "moveFromLeft", "moveToRight", "moveToLeft"
 			outline: none
 			transition: color .2s linear
 			-webkit-transition: color .2s linear
-			&:hover, & .item-current
+			&:hover, & .mi-current
 				color: #000
-			&.item-selected:after,&.item-selected:before
+			&.mi-selected:after,&.mi-selected:before
 				content: ''
 				position: absolute
 				top: -5px
@@ -157,13 +159,13 @@ $class-names: "moveFromRight", "moveFromLeft", "moveToRight", "moveToLeft"
 				height: 0
 				width: 0
 				pointer-events: none
-			&.item-selected:after // Dodaje kontent przed i po "" ktory daje border
+			&.mi-selected:after // Dodaje kontent przed i po "" ktory daje border
 				border-color: transparent
 				border-top-color: #fff
 				border-width: 20px // ten jest nakladany po i jest bialy (zaslania czarny)
 				left: 50%
 				margin-left: -20px
-			&.item-selected:before
+			&.mi-selected:before
 				border-color: transparent
 				border-top-color: #333
 				border-width: 27px // szerszy i zasloniety przez to z after
