--- a/index.haml
+++ b/index.haml
@@ -4,7 +4,7 @@
 		%title Nina Peplińska
 		%meta{charset: "UTF-8"}
 		%link{rel: "stylesheet", href: "styles.css"}
-		/ %script{src: "libraries/modernizr.js"}  
+		%script{src: "libraries/modernizr.js"}  
 	%body
 		.mi-slider#mi-slider
 			-# ul*4>li*4>a>img SO EASY!!!!
